--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,25 @@ edition = "2018"
 [dependencies.embedded-hal]
 version = "0.2.2"
 features = ["unproven"]
+
+[dependencies.stm32f30x-hal]
+version = "0.2.0"
+
+[dependencies.f3]
+features = ["rt"]
+version = "0.6.1"
+
+[dev-dependencies]
+cortex-m = "0.5.7"
+cortex-m-rt = "0.6.5"
+cortex-m-semihosting = "0.3.1"
+panic-semihosting = "0.5.0"
+
+[profile.dev]
+incremental = false
+codegen-units = 1
+
+[profile.release]
+codegen-units = 1 # better optimizations
+debug = true # symbols are nice and they don't increase the size on Flash
+lto = true # better optimizations
